--- a/FitVerse.WebUI/Views/Client/DashBoard.cshtml
+++ b/FitVerse.WebUI/Views/Client/DashBoard.cshtml
@@ -1,4 +1,4 @@
-﻿@{
+@{
     ViewData["Title"] = "Client";
     Layout = "~/Views/Shared/_ClientLayout.cshtml";
 }
@@ -282,5 +282,6 @@
             </div>
         </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
+@section Scripts {
+    <!-- ✅ Bootstrap already loaded in Layout -->
+}
