--- a/FitVerse.WebUI/Views/ClientDashboard/Index.cshtml
+++ b/FitVerse.WebUI/Views/ClientDashboard/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@{
+@{
     ViewData["Title"] = "Client Dashboard";
     Layout = "~/Views/Shared/_ClientLayout.cshtml";
 }
@@ -359,7 +359,8 @@
             </div>
         </div>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+@section Scripts {
+        <!-- ✅ Bootstrap already in Layout -->
         <script>
             // Toggle exercise completion
             document.querySelectorAll('.exercise-checkbox').forEach(checkbox => {
@@ -380,4 +381,4 @@
                 });
             });
         </script>
-
+}
