--- a/FitVerse.WebUI/Views/Exercise/Index.cshtml
+++ b/FitVerse.WebUI/Views/Exercise/Index.cshtml
@@ -193,7 +193,6 @@
 </div>
 
 @section Scripts {
+    <!-- ✅ Bootstrap already loaded in Layout - don't load it again! -->
     <script src="~/ViewJs/exercise.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
 }
